* Fixed "CSS button styles overflow to form elements" by @bocaj See #2313947 for more info.

--- a/css/style.css
+++ b/css/style.css
@@ -1503,10 +1503,10 @@ div.exposed-filters input#edit-submit:active {
 }
 
 /* Green Button */
-input[id^="edit-submit"],
+input[type="submit"][id^="edit-submit"],
 input#edit-actions-submit,
 input[id^="save-continue"],
-input[id^="edit-save"],
+input[type="submit"][id^="edit-save"],
 input#edit-save,
 input#edit-submit,
 input#edit-actions-save,
@@ -1525,10 +1525,10 @@ input#edit-actions-save,
   background: #4d8f46;
 }
 
-input[id^="edit-submit"]:hover,
+input[type="submit"][id^="edit-submit"]:hover,
 input#edit-actions-submit:hover,
 input[id^="save-continue"]:hover,
-input[id^="edit-save"]:hover,
+input[type="submit"][id^="edit-save"]:hover,
 input#edit-save:hover,
 input#edit-submit:hover,
 input#edit-actions-save:hover,
@@ -1542,7 +1542,7 @@ input#edit-actions-save:hover,
 input#edit-submit:active,
 input#edit-actions-submit:active,
 input[id^="save-continue"]:active,
-input[id^="edit-save"]:active,
+input[type="submit"][id^="edit-save"]:active,
 input#edit-save:active,
 input#edit-submit:active,
 input#edit-actions-save:active {
@@ -1605,7 +1605,7 @@ body.page-admin-modules-uninstall input#edit-submit:active {
 input#edit-preview,
 input#edit-next,
 input#preview-submit,
-input[id^="edit-return"] {
+input[type="submit"][id^="edit-return"] {
   cursor: pointer;
   border-radius: 0;
   border: none;
@@ -1623,7 +1623,7 @@ input[id^="edit-return"] {
 input#edit-preview:hover,
 input#edit-next:hover,
 input#preview-submit:hover,
-input[id^="edit-return"]:hover {
+input[type="submit"][id^="edit-return"]:hover {
   background: #004c99;
   border-radius: 0;
   border: none;
@@ -1633,7 +1633,7 @@ input[id^="edit-return"]:hover {
 input#edit-preview:active,
 input#edit-next:active,
 input#preview-submit:active,
-input[id^="edit-return"]:active {
+input[type="submit"][id^="edit-return"]:active {
   box-shadow: 0 2px 2px rgba(0,0,0,0.75) inset;
   background: #333;
   border-radius: 0;
